# MenuSystemManager

./: CMakeLists.txt  README.md
ExampleMenuApp/: CMakeLists.txt
ExampleMenuApp/header/: utils.h
ExampleMenuApp/src/: main.cpp
MenuManagerLib/: CMakeLists.txt
MenuManagerLib/header/: GeneralItem.h  IExternalDevice.h  IExternalMemory.h  IKeyBoard.h  IMenuBuilder.h  IMenuNavigation.h  IMenuUpdater.h  INavigationCmdBuilder.h  IOperationItem.h  IScreen.h  IStateSelection.h  KeyBoardStub.h  Menu.h  MenuBuilder.h  MenuItem.h  MenuManager.h  Navigation.h  OperationItem.h  ScreenStub.h  StateSelectionItem.h
MenuManagerLib/src/: GeneralItem.cpp  Menu.cpp  MenuBuilder.cpp  MenuItem.cpp  MenuManager.cpp  Navigation.cpp  OperationItem.cpp  StateSelectionItem.cpp
